--- a/microservico_insercao_dados/composer.json
+++ b/microservico_insercao_dados/composer.json
@@ -1,6 +1,7 @@
 {
 	"require": {
-		"slim/slim": "2.6.2"
+		"slim/slim": "2.6.2",
+		"elasticsearch/elasticsearch": "v7.5.0"
 	},
 	"autoload": {
 		"psr-4": {
