--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,12 @@ services:
             MYSQL_ROOT_PASSWORD: root
 
     elasticsearch:
-        image: elasticsearch:6.8.6
+        image: docker.elastic.co/elasticsearch/elasticsearch:5.3.0
         container_name: autocomplete_elasticsearch
+        environment:
+            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+            - "xpack.security.enabled=false"       
+        ports:
+            - "9200:9200"             
+        volumes:
+            - ~/elasticsearch_docker/autocomplete_elasticsearch/data:/usr/share/elasticsearch/data
