--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,12 +30,14 @@ services:
             MYSQL_ROOT_PASSWORD: root
 
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:5.3.0
+        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
         container_name: autocomplete_elasticsearch
         environment:
-            - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-            - "xpack.security.enabled=false"       
+            - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
+            - "xpack.security.enabled=false"     
+            - "discovery.type=single-node"  
         ports:
-            - "9200:9200"             
+            - "9200:9200"   
+            - "9300:9300"          
         volumes:
             - ~/elasticsearch_docker/autocomplete_elasticsearch/data:/usr/share/elasticsearch/data
