--- a/sistema/composer.json
+++ b/sistema/composer.json
@@ -1,7 +1,8 @@
 {
 	"require": {
 		"slim/slim": "2.6.2",
-		"elasticsearch/elasticsearch": "v7.5.0"
+		"elasticsearch/elasticsearch": "v7.5.0",
+		"symfony/dotenv" : "v5.0.3"
 	},
 	"autoload": {
 		"psr-4": {
